Fixing overflow rendering issues on some of the block labels

--- a/manchester_traffic_offences/assets-src/stylesheets/main.scss
+++ b/manchester_traffic_offences/assets-src/stylesheets/main.scss
@@ -124,7 +124,7 @@ select {border-color: #bfc1c3;}
 section#charges {clear: both; width: 75%;}
 section#charges #enter-charges {float:left; width:70%;}
 section#charges #charge-loc {float: right; width:30%; margin: 1em 0;}
-.charge-radios {overflow: auto; margin-bottom:1em;}
+.charge-radios {margin-bottom: 1em;}
 
 section .info-notice {background: none; border-left: 10px #dee0e2 solid; margin-bottom: 1em;margin-top: 2em;}
 section .info-notice p{line-height: 1.31579;}
@@ -232,6 +232,7 @@ div.error, section.error {
 
   .full {
     overflow: auto;
+    padding-left:3px;
   }
 
   .amount {float: left;}
